Test/server/marshal.transcript
# RUN: %server "%s" > "%t"
# RUN: %diff "%s.expect" "%t"
marshal
method Abs(x: int) returns (y: int)
  ensures 0 <= y
{
  return x;  // error: may be negative
}
[[DAFNY-CLIENT: EOM]]
